--- a/html/index.html
+++ b/html/index.html
@@ -4,6 +4,6 @@
 </head>
 <body>
     <h2>name: Kangwen Sun</h2>
-    <h2>student id： 20222093 </h2>
+    <h2>student id   20222093 </h2>
     <img src="./a.jpg">
 </body>
